# audio-transcriber-whisperx

./: .dockerignore  .env.example  .env_example  .gitignore  AGENTS.md  DOCKER.md  Dockerfile  LICENSE  README.md  SETUP.md  app.py  docker-compose.yml  download_local_models.py  main.py  pyproject.toml  requirements.txt  setup.ps1  setup.sh  transcribe.py
.opencode/commands/: stream-note-taker.md
output/: transcription-en_US.txt  transcription-pt_BR.txt  transcription_audio-en_US.txt  transcription_audio-pt_BR.txt
static/: styles.css
templates/: upload.html
